--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "build": "echo \"Error: no build step specified\"",
+    "lint": "eslint .",
+    "predeploy": "npm run build",
+    "deploy": "echo \"Error: no deploy step specified\""
+  },  
   "keywords": [],
   "author": "",
   "license": "ISC",
