--- a/package.json
+++ b/package.json
@@ -1,20 +1,13 @@
 {
   "name": "yt-mp4-converter",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "build": "echo \"Error: no build step specified\"",
-    "lint": "eslint .",
-    "predeploy": "npm run build",
-    "deploy": "echo \"Error: no deploy step specified\""
-  },  
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+    "dev": "nodemon functions/index.js",
+    "build": "echo \"No build step required for Netlify\"",
+    "start": "node functions/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
@@ -26,6 +19,7 @@
     "path": "^0.12.7",
     "progress": "^2.0.3",
     "sanitize-filename": "^1.6.3",
+    "serverless-http": "^2.7.0",
     "ytdl-core": "^4.11.5",
     "ytdl-core-discord": "^1.3.1"
   }
