--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon functions/index.js",
-    "build": "echo \"No build step required for Netlify\"",
-    "start": "node functions/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "build": "echo \"No build step necessary\"",
+    "lint": "eslint ."
+  },  
   "dependencies": {
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
