--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint .",
-    "test": "mocha",
-    "build": "webpack",
-    "start": "node index.js",
-    "prebuild": "npm run lint && npm test"
+    "start": "node server.js",
+    "build": "npm run build",
+    "vercel-build": "npm run build"
   },
   "keywords": [],
   "author": "",
@@ -26,10 +24,5 @@
     "sanitize-filename": "^1.6.3",
     "ytdl-core": "^4.11.5",
     "ytdl-core-discord": "^1.3.1"
-  },
-  "devDependencies": {
-    "eslint": "^9.3.0",
-    "gulp": "^5.0.0",
-    "mocha": "^10.4.0"
   }
 }
