--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "build": "npm run build",
-    "vercel-build": "npm run build"
+    "build": "npm run build"
   },
   "keywords": [],
   "author": "",
